--- a/src/app/routes/goods/libs/libs.component.html
+++ b/src/app/routes/goods/libs/libs.component.html
@@ -12,15 +12,16 @@
       </ng-template>
     </nz-card>
   </div>
-  <!-- 循环遍历所有商品，初始化N条商品，TODO : 下拉加载 -->
-  <div nz-col [nzSpan]="6" *ngFor="let good of goods" >
-    <nz-card [nzBordered]="false" [nzNoHovering]="true" class="goods" >
+  <div nz-col [nzSpan]="6" *ngFor="let good of goods">
+    <nz-card [nzBordered]="false" [nzNoHovering]="true" class="goods">
       <ng-template #body>
         <div class="goods-detail">
           <div class="goods-desc">
             <div class="goods-title">{{good.goods_name}}</div>
             <div class="goods-price">￥ {{(good.price / 100).toFixed(2)}}</div>
-            <div><nz-tag [nzColor]="'red'">{{good.tag}}</nz-tag></div>
+            <div>
+              <nz-tag [nzColor]="'red'">{{good.tag}}</nz-tag>
+            </div>
             <div>{{good.spec}}</div>
             <div>{{good.description}}</div>
           </div>
@@ -217,17 +218,17 @@
             </div>
             <div nz-form-item nz-row>
               <div nz-form-label nz-col [nzSm]="6">
-                  <label nz-form-item-required>商品图片</label>
-                </div>
-                <div nz-form-control nz-col [nzSm]="14">
-                  <nz-input [nzSize]="'large'" formControlName="img_t"
-                                  [nzType]="'text'" [nzId]="'img_t'" 
-                                  [(ngModel)]="imgurl" style="display:none"></nz-input>
-                  <input type="file" id="file1" accept ng2FileSelect [uploader]="uploader"
-                              (change)="selectedFileOnChanged($event)">
+                <label nz-form-item-required>商品图片</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="img_t"
+                          [nzType]="'text'" [nzId]="'img_t'"
+                          [(ngModel)]="imgurl" style="display:none"></nz-input>
+                <input type="file" id="file1" accept ng2FileSelect [uploader]="uploader"
+                       (change)="selectedFileOnChanged($event)">
               </div>
             </div>
-            
+
             <div nz-form-item nz-row>
               <div nz-form-label nz-col [nzSm]="6">
                 <label>商品标签</label>
@@ -255,73 +256,73 @@
         </div>
         <div nz-col [nzSpan]="14">
           当前图片：<img src="{{good_tmp.pic}}" style="vertical-align:middle;width:100px;"/>
-            
-            <nz-table #nzTable [nzDataSource]="files" [nzCustomNoResult]="true" [nzIsPagination]="false">
-              <div noResult>请选择新的图片</div>
-              <thead nz-thead>
-                <tr>
-                  <th nz-th>文件名字</th>
-                  <th nz-th>文件大小</th>
-                  <th nz-th>进度</th>
-                  <th nz-th>状态</th>
-                  <th nz-th>操作</th>
-                </tr>
-              </thead>
-              <tbody nz-tbody>
-                <tr nz-tbody-tr *ngFor="let item of nzTable.data">
-                  <td nz-td> <strong>{{item?.file?.name}}</strong> </td>
-                  <td nz-td *ngIf="uploader.options.isHTML5" nowrap>
-                    {{ item?.file?.size/1024/1024 | number:'.2' }}MB
-                  </td>
-                  <td nz-td *ngIf="uploader.options.isHTML5">
-                    <nz-progress [ngModel]="item.progress" [nzStrokeWidth]="5"></nz-progress>
-                  </td>
-                  <td nz-td class="text-center">
+
+          <nz-table #nzTable [nzDataSource]="files" [nzCustomNoResult]="true" [nzIsPagination]="false">
+            <div noResult>请选择新的图片</div>
+            <thead nz-thead>
+            <tr>
+              <th nz-th>文件名字</th>
+              <th nz-th>文件大小</th>
+              <th nz-th>进度</th>
+              <th nz-th>状态</th>
+              <th nz-th>操作</th>
+            </tr>
+            </thead>
+            <tbody nz-tbody>
+            <tr nz-tbody-tr *ngFor="let item of nzTable.data">
+              <td nz-td><strong>{{item?.file?.name}}</strong></td>
+              <td nz-td *ngIf="uploader.options.isHTML5" nowrap>
+                {{ item?.file?.size/1024/1024 | number:'.2' }}MB
+              </td>
+              <td nz-td *ngIf="uploader.options.isHTML5">
+                <nz-progress [ngModel]="item.progress" [nzStrokeWidth]="5"></nz-progress>
+              </td>
+              <td nz-td class="text-center">
                     <span *ngIf="item.isSuccess">
                       <nz-tag [nzColor]="'green'"></nz-tag>
                     </span>
-                    <span *ngIf="item.isCancel" class="mr-md">
+                <span *ngIf="item.isCancel" class="mr-md">
                       <nz-tag [nzColor]="'orange'"></nz-tag>
                     </span>
-                    <span *ngIf="item.isError">
+                <span *ngIf="item.isError">
                       <nz-tag [nzColor]="'red'"></nz-tag>
                     </span>
-                  </td>
-                  <td nz-td nowrap>
-                    <nz-button-group>
-                      <button nz-button (click)="uploadFile()" [nzType]="'primary'"
-                                    [disabled]="item.isReady || item.isUploading">
-                                    <i class="anticon anicon-upload"></i>
-                      </button>
-                      <button nz-button (click)="item.cancel()" [disabled]="!item.isUploading">
-                                    <i class="anticon  ants"></i>               
-                      </button>
-                      <button nz-butto (click)="item.remove()">
-                        <i class="anticon anticon-delete"></i>
-                      </button>
-                    </nz-button-group>
-                  </td>
-                </tr>
-              </tbody>
-            </nz-table>
-            <nz-card [nzBordered]="false" [nzNoHovering]="true">
-              <ng-template #body>
-                <nz-progress [ngModel]="uploader.progress" [nzStrokeWidth]="5"></nz-progress>
-                <nz-button-group class="mt-md d-block">
-                  <button nz-button (click)="uploadFile()" [nzType]="'primary'" [nzLoading]="uploader.isUploading"
-                              [disabled]="!uploader.getNotUploadedItems().length">
-                      <i class="anticon anticon-upload"></i>上传
+              </td>
+              <td nz-td nowrap>
+                <nz-button-group>
+                  <button nz-button (click)="uploadFile()" [nzType]="'primary'"
+                          [disabled]="item.isReady || item.isUploading">
+                    <i class="anticon anicon-upload"></i>
                   </button>
-                  <button nz-button (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
-                    <i class="anticon anticon-close"></i>取消
+                  <button nz-button (click)="item.cancel()" [disabled]="!item.isUploading">
+                    <i class="anticon  ants"></i>
                   </button>
-                  <button nz-button (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-                    <i class="anticon anticon-delete"></i>移除照片
+                  <button nz-butto (click)="item.remove()">
+                    <i class="anticon anticon-delete"></i>
                   </button>
                 </nz-button-group>
-              </ng-template>
-            </nz-card>
-      </div>
+              </td>
+            </tr>
+            </tbody>
+          </nz-table>
+          <nz-card [nzBordered]="false" [nzNoHovering]="true">
+            <ng-template #body>
+              <nz-progress [ngModel]="uploader.progress" [nzStrokeWidth]="5"></nz-progress>
+              <nz-button-group class="mt-md d-block">
+                <button nz-button (click)="uploadFile()" [nzType]="'primary'" [nzLoading]="uploader.isUploading"
+                        [disabled]="!uploader.getNotUploadedItems().length">
+                  <i class="anticon anticon-upload"></i>上传
+                </button>
+                <button nz-button (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+                  <i class="anticon anticon-close"></i>取消
+                </button>
+                <button nz-button (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                  <i class="anticon anticon-delete"></i>移除照片
+                </button>
+              </nz-button-group>
+            </ng-template>
+          </nz-card>
+        </div>
       </div>
     </ng-template>
     <ng-template #modalFooter_edit>
@@ -336,11 +337,11 @@
   </nz-modal>
 </div>
 <!-- 加载中与加载数据结束的提示 -->
-<div  class="loading" *ngIf="sloading">
+<div class="loading" *ngIf="sloading">
   <nz-spin [nzSize]="'large'" [nzTip]="'正在加载...'"></nz-spin>
 </div>
 <div *ngIf="end" class="loading">
- <p>---- &nbsp;&nbsp; 人家也是有底线的呢 &nbsp;&nbsp; ----</p>
+  <p>---- &nbsp;&nbsp; 人家也是有底线的呢 &nbsp;&nbsp; ----</p>
 </div>
 
 <!-- 返回顶部 -->
