--- a/src/app/routes/goods/sell/sell.component.html
+++ b/src/app/routes/goods/sell/sell.component.html
@@ -1,6 +1,6 @@
 <div nz-row [nzGutter]="24" class="pt-lg">
   <!-- 展示与新建门店模板暂不做处理 -->
-  <!-- 
+  <!--
     杀人案？自杀？不可能犯罪？
     从楼顶跃下，定案为自杀
     没有任何自杀的理由，
@@ -33,80 +33,81 @@
     </div>
   -->
   <!-- 查询应用信息，并展示应用内商品 -->
-    <div nz-col [nzSpan]="4">
-        <ul nz-menu [nzMode]="'inline'">
-          <li nz-menu-item *ngFor="let app of apps" (click)="tempQuery(app.appcode)">
+  <div nz-col [nzSpan]="4">
+    <ul nz-menu [nzMode]="'inline'">
+      <li nz-menu-item *ngFor="let app of apps" (click)="tempQuery(app.appcode)">
             <span><i class="anticon anticon-file"></i>
               <span class="nav-text">{{app.title}}</span>
             </span>
-          </li>
-        </ul>
-      </div>
-      <div nz-col [nzSpan]="20">
-        <nz-card [nzBordered]="false" [nzNoHovering]="true" *ngFor="let t of template" id="template{{t.template}}">
-          <ng-template #title>
-            门店模板{{t.template}}
-            <nz-tag [nzColor]="'blue'">测试酒店</nz-tag>
-          </ng-template>
-          <ng-template #extra>
-            <button nz-button [nzType]="'default'" (click)="newChannel(t.template)">
-              <i class="anticon anticon-plus-circle-o"></i>
-              新增分类
-            </button>
-            <!-- <button nz-button [nzType]="'danger'" (click)="bandTemplateAPPID(t.template)">
-              上线该模板门店
-            </button> -->
-          </ng-template>
-          <ng-template #body>
-            <div nz-row [nzGutter]="24" *ngFor="let c of t.data">
-              <div nz-col [nzSpan]="24" style="padding-bottom: 15px">
-                <nz-alert [nzType]="'info'"><span alert-body><pre>[{{c.num}}]{{c.name}}</pre></span></nz-alert>
-              </div>
-              <div nz-col [nzSpan]="24" style="padding-bottom: 15px">
-                <button nz-button [nzType]="'dashed'" (click)="editChannel(t.template,c)">
-                  <i class="anticon anticon-plus-circle-o"></i>
-                  修改分类
-                </button>
-                <button nz-button [nzType]="'dashed'" (click)="addGoods(c)">
-                  <i class="anticon anticon-shop"></i>
-                  上架商品
-                </button>
-                <button nz-button [nzType]="'dashed'">
-                  <nz-popconfirm [nzTitle]="'确定删除该分类？'" (nzOnConfirm)="delChannel(t.template, c.channel)" (nzOnCancel)="cancel()">
-                    <a nz-popconfirm>删除分类</a>
-                  </nz-popconfirm>
-                </button>
-             </div>
-              <div nz-col [nzSpan]="8" *ngFor="let good of c.goods">
-                <nz-card [nzNoHovering]="true" class="goods" *ngIf="good.info">
-                  <ng-template #body>
-                    <div class="goods-detail">
-                      <div class="goods-desc">
-                        <div class="goods-title">{{good.info.goods_name}}</div>
-                        <div class="goods-price">￥ {{(good.info.price / 100).toFixed(2)}}</div>
-                        <div>
-                          <nz-tag [nzColor]="'red'">{{good.info.tag}}</nz-tag>
-                        </div>
-                        <div>{{good.info.spec}}</div>
-                        <div>{{good.info.description}}</div>
-                      </div>
-                      <div class="goods-img">
-                        <img src="{{good.info.pic}}"/>
-                      </div>
-                    </div>
-                    <div class="goods-handle">
-                      <button nz-button [nzType]="'danger'">
-                        <nz-popconfirm [nzTitle]="'确定移除该商品？'" (nzOnConfirm)="delGoods(c.channel, good.info.id)" (nzOnCancel)="cancel()">
-                          <a nz-popconfirm>移除商品</a>
-                        </nz-popconfirm>
-                      </button>
-                    </div>
-                  </ng-template>
-                </nz-card>
-              </div>
-            </div>
-          </ng-template>
-        </nz-card>
-      </div>
+      </li>
+    </ul>
   </div>
-    
+  <div nz-col [nzSpan]="20">
+    <nz-card [nzBordered]="false" [nzNoHovering]="true" *ngFor="let t of template" id="template{{t.template}}">
+      <ng-template #title>
+        门店模板{{t.template}}
+        <nz-tag [nzColor]="'blue'">测试酒店</nz-tag>
+      </ng-template>
+      <ng-template #extra>
+        <button nz-button [nzType]="'default'" (click)="newChannel(t.template)">
+          <i class="anticon anticon-plus-circle-o"></i>
+          新增分类
+        </button>
+        <!-- <button nz-button [nzType]="'danger'" (click)="bandTemplateAPPID(t.template)">
+          上线该模板门店
+        </button> -->
+      </ng-template>
+      <ng-template #body>
+        <div nz-row [nzGutter]="24" *ngFor="let c of t.data">
+          <div nz-col [nzSpan]="24" style="padding-bottom: 15px">
+            <nz-alert [nzType]="'info'"><span alert-body><pre>[{{c.num}}]{{c.name}}</pre></span></nz-alert>
+          </div>
+          <div nz-col [nzSpan]="24" style="padding-bottom: 15px">
+            <button nz-button [nzType]="'dashed'" (click)="editChannel(t.template,c)">
+              <i class="anticon anticon-plus-circle-o"></i>
+              修改分类
+            </button>
+            <button nz-button [nzType]="'dashed'" (click)="addGoods(c)">
+              <i class="anticon anticon-shop"></i>
+              上架商品
+            </button>
+            <button nz-button [nzType]="'dashed'">
+              <nz-popconfirm [nzTitle]="'确定删除该分类？'" (nzOnConfirm)="delChannel(t.template, c.channel)"
+                             (nzOnCancel)="cancel()">
+                <a nz-popconfirm>删除分类</a>
+              </nz-popconfirm>
+            </button>
+          </div>
+          <div nz-col [nzSpan]="8" *ngFor="let good of c.goods">
+            <nz-card [nzNoHovering]="true" class="goods" *ngIf="good.info">
+              <ng-template #body>
+                <div class="goods-detail">
+                  <div class="goods-desc">
+                    <div class="goods-title">{{good.info.goods_name}}</div>
+                    <div class="goods-price">￥ {{(good.info.price / 100).toFixed(2)}}</div>
+                    <div>
+                      <nz-tag [nzColor]="'red'">{{good.info.tag}}</nz-tag>
+                    </div>
+                    <div>{{good.info.spec}}</div>
+                    <div>{{good.info.description}}</div>
+                  </div>
+                  <div class="goods-img">
+                    <img src="{{good.info.pic}}"/>
+                  </div>
+                </div>
+                <div class="goods-handle">
+                  <button nz-button [nzType]="'danger'">
+                    <nz-popconfirm [nzTitle]="'确定移除该商品？'" (nzOnConfirm)="delGoods(c.channel, good.info.id)"
+                                   (nzOnCancel)="cancel()">
+                      <a nz-popconfirm>移除商品</a>
+                    </nz-popconfirm>
+                  </button>
+                </div>
+              </ng-template>
+            </nz-card>
+          </div>
+        </div>
+      </ng-template>
+    </nz-card>
+  </div>
+</div>
