--- a/src/app/routes/pages/login/login.component.html
+++ b/src/app/routes/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="logo">
     <a [routerLink]="['/']">
-      <img class="expanded" src="./assets/img/coubuy_logo.png" alt="" style="max-height:40px;" />
+      <img class="expanded" src="./assets/img/coubuy_logo.png" alt="" style="max-height:40px;"/>
     </a>
   </div>
   <p class="title">登录页</p>
@@ -35,7 +35,8 @@
             <span>记住密码</span>
           </label>
           <!-- <a class="login-form-forgot">忘记密码</a> -->
-          <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'" (click)="login()">登录</button>
+          <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'" (click)="login()">登录
+          </button>
         </div>
       </div>
     </form>
